--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -88,6 +88,9 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .card:hover,
@@ -98,7 +101,6 @@
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
   font-size: 1.5rem;
 }
 
